<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="120dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_result"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/container_bottom_sheet"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8">

                <TextView
                    android:id="@+id/text_result_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    tools:text="Origem"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/icon_result_arrow"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_toEndOf="@id/text_result_origin"
                    android:src="@drawable/ic_arrow_forward" />

                <TextView
                    android:id="@+id/text_result_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    android:layout_toEndOf="@id/icon_result_arrow"
                    tools:text="Destino"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/label_result_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_result_origin"
                    android:layout_alignParentStart="true"
                    android:text="@string/custo_total"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_result_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_result_cost"
                    android:layout_alignParentStart="true"
                    tools:text="R$ 1.325,00"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/text_result_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    tools:text="325 km" />

                <TextView
                    android:id="@+id/text_result_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_result_distance"
                    android:layout_alignParentEnd="true"
                    tools:text="13h25" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/label_result_fuel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/combustivel"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_result_fuel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_result_fuel"
                    android:layout_alignParentStart="true"
                    tools:text="R$ 1.325,00"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_result_fuelLiters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_result_fuel"
                    android:layout_alignParentStart="true"
                    tools:text="325 litros"
                    android:textColor="@color/text" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_result_toll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/label_result_toll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/pedagios"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_result_toll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_result_toll"
                    android:layout_alignParentStart="true"
                    tools:text="R$ 1.325,00"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_result_tollNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_result_toll"
                    android:layout_alignParentStart="true"
                    tools:text="3 pedágios"
                    android:textColor="@color/text" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/label_result_minimum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/valor_minimo_do_frete"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_result_antt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antt"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/label_request_geral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/geral"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_request_geral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    tools:text="R$ 3450,00"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/label_request_frigorificada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/frigorifico"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_request_frigorificada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    tools:text="R$ 3450,00"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/label_request_granel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/granel"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_request_granel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    tools:text="R$ 3450,00"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/label_request_neogranel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/neogranel"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_request_neogranel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    tools:text="R$ 3450,00"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/label_request_perigosa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/perigosa"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_request_perigosa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    tools:text="R$ 3450,00"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>